--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^6.15.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "stripe": "^8.140.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
